--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,79 @@
     transform: rotate(360deg);
   }
 }
+
+h1{
+  text-align: center;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+
+}
+
+calcContainer{
+  display: flex;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+}
+
+displayContainder{
+  flex: 1;
+  flex-direction: column;
+}
+
+display{
+  flex: 1;
+  background-color: black;
+  padding-left: 483px;
+  color: white;
+  font-size: 30px;
+
+
+}
+
+numbers{
+  flex: 2;
+  flex-direction: row;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #bbc1cf;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  text-align: center;
+}
+
+
+row1{
+
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  width: 500px;
+
+}
+
+row2{
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  width: 500px;
+
+}
+
+row3{
+  display: flex;
+  flex-direction: row;
+  width: 500px;
+
+}
+
+row4{
+  display: flex;
+  flex-direction: row;
+  width: 500px;
+
+}
+
+
