--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,6 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 500px;
 }
 
 .App-header {
@@ -37,79 +27,25 @@
   }
 }
 
-h1{
-  text-align: center;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-
+.CalcDisplay {
+  border: 1px solid black;
+  height: 40px;
+  font-size: 2em;
+  text-align: right;
+  padding:0 10px;
+  background:#000;
+  color:#fff;
 }
 
-calcContainer{
-  display: flex;
-  background-color: white;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 500px;
-
+.ButtonContainer {
+    display: flex;
+    flex: 0 1 100%;
+    flex-wrap: wrap;
 }
 
-displayContainder{
-  flex: 1;
-  flex-direction: column;
+.CalcButton {
+    display: flex;
+    flex: 0 1 25%;
+    font-size: 2em;
+    justify-content: center;
 }
-
-display{
-  flex: 1;
-  background-color: black;
-  padding-left: 483px;
-  color: white;
-  font-size: 30px;
-
-
-}
-
-button{
-  flex: 2;
-  flex-direction: row;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #bbc1cf;
-  border-style: solid;
-  border-color: black;
-  border-width: 1px;
-  text-align: center;
-}
-
-
-row1{
-
-  display: flex;
-  flex-direction: row;
-  width: auto;
-  width: 500px;
-
-}
-
-row2{
-  display: flex;
-  flex-direction: row;
-  width: auto;
-  width: 500px;
-
-}
-
-row3{
-  display: flex;
-  flex-direction: row;
-  width: 500px;
-
-}
-
-row4{
-  display: flex;
-  flex-direction: row;
-  width: 500px;
-
-}
-
-
